drag n drop demo

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: > # this means to ignore newlines until "keywords:"
 keywords: "tutorial, demo, javascript, python"
 url: "http://bitwiser.in/tutorial-demos" # the base hostname & protocol for your site
 baseurl: "http://bitwiser.in/tutorial-demos" # the subpath of your site, e.g. /blog/
+#url: ""
+#baseurl: ""
 paginate: 5
 paginate_path: "page:num"
 # Build settings
